# minishell

./: .gitignore  CMakeLists.txt  Makefile  builtins.c  builtins.h  builtins_utils.c  builtins_utils.h  cd_builtin.c  commands.c  commands.h  echo_builtin.c  env_builtin.c  env_variables_utils.c  env_variables_utils.h  environment.c  environment.h  execution.c  execution_utils.c  execution_utils.h  exit_builtin.c  export_builtin.c  main.c  minishell.c  minishell.h  parsing.c  parsing.h  parsing_utils.c  parsing_utils.h  redirections_utils.c  redirections_utils.h  signals.c  signals.h  string_utils.c  string_utils.h  tokens.c  tokens.h  unset_builtin.c  utilities.c  utilities.h
builtins/: exit_builtin.c  export_builtin.c  pwd_builtin.c  unset_builtin.c
environment/: env_variables_utils.c  environment.c  environment_utils.c
execution/: execution.c
includes/: builtins.h  builtins_utils.h  commands.h  environment.h  environment_utils.h  execution.h  execution_utils.h  minishell.h  parsing.h  parsing_utils.h  signals.h  str_split.h  string_utils.h  tokens.h  utilities.h
misc/: str_split.c  string_utils.c  utilities.c
parsing/: commands.c  parsing.c  parsing_utils.c  redirections_utils.c  tokens.c
